force-app/main/default/objects/Ship_Bill_Address__c/Ship_Bill_Address__c.object-meta.xml
<CustomObject>
    <label>Bill to &amp; Ship to Address</label>
    <nameField>
        <displayFormat>SB{0000000}</displayFormat>
        <label>Ship Bill ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bill to &amp; Ship to Addresses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>