force-app/main/default/objects/Ship_Bill_Address__c/fields/Bill_Ship_Status__c.field-meta.xml
<CustomField>
    <fullName>Bill_Ship_Status__c</fullName>
    <label>Address Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>