force-app/main/default/objects/Ship_Bill_Address__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>contact person for the bill ship address</description>
    <label>Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>