force-app/main/default/objects/Ship_Bill_Address__c/fields/ERP_Customer_Code_Status__c.field-meta.xml
<CustomField>
    <fullName>ERP_Customer_Code_Status__c</fullName>
    <description>This field integrate with ERP System, checking the latest status in ERP</description>
    <inlineHelpText>Checking the latest status in local ERP</inlineHelpText>
    <label>ERP Customer Code Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>