force-app/main/default/objects/Ship_Bill_Address__c/fields/ERP_User__c.field-meta.xml
<CustomField>
    <fullName>ERP_User__c</fullName>
    <description>Who change status in ERP</description>
    <inlineHelpText>Who change status in ERP</inlineHelpText>
    <label>ERP User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>