force-app/main/default/objects/Ship_Bill_Address__c/fields/Factory_Name__c.field-meta.xml
<CustomField>
    <fullName>Factory_Name__c</fullName>
    <description>company name for the bill to / ship to address</description>
    <label>Factory Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>