force-app/main/default/objects/Ship_Bill_Address__c/fields/Fax_No__c.field-meta.xml
<CustomField>
    <fullName>Fax_No__c</fullName>
    <label>Fax No</label>
    <type>Phone</type>
</CustomField>