force-app/main/default/objects/Ship_Bill_Address__c/fields/Local_ERP_customer_code__c.field-meta.xml
<CustomField>
    <fullName>Local_ERP_customer_code__c</fullName>
    <description>Lookup Link to ERP Link</description>
    <label>Local ERP customer code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>