force-app/main/default/objects/Ship_Bill_Address__c/fields/Other_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Country_Name__c</fullName>
    <label>Other Country Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>