force-app/main/default/objects/Ship_Bill_Address__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <description>any remark necessary for Bill to or Ship to</description>
    <label>Remark</label>
    <length>50</length>
    <type>Text</type>
</CustomField>