force-app/main/default/objects/Ship_Bill_Address__c/fields/Tel_No__c.field-meta.xml
<CustomField>
    <fullName>Tel_No__c</fullName>
    <label>Tel No</label>
    <type>Phone</type>
</CustomField>