force-app/main/default/objects/Ship_Bill_Address__c/recordTypes/Bill_To.recordType-meta.xml
<RecordType>
    <fullName>Bill_To</fullName>
    <active>true</active>
    <description>Add Bill to Address for Order Enquiry Form</description>
    <label>Bill To</label>
</RecordType>