force-app/main/default/objects/Ship_Bill_Address__c/recordTypes/Ship_To.recordType-meta.xml
<RecordType>
    <fullName>Ship_To</fullName>
    <active>true</active>
    <description>Add Ship to Address for Order Enquiry form</description>
    <label>Ship To</label>
</RecordType>