force-app/main/default/objects/Ship_Bill_Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Factory_Name__c</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>Bill_Ship_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>