force-app/main/default/objects/Ship_Bill_Address__c/listViews/All_Buyer.listView-meta.xml
<ListView>
    <fullName>All_Buyer</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Factory_Name__c</columns>
    <columns>Address_1__c</columns>
    <columns>Address_2__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Country__c</columns>
    <columns>Contact__c</columns>
    <columns>Tel_No__c</columns>
    <columns>Fax_No__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Bill_Ship_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>0122D000000nO7O</value>
    </filters>
    <label>All Buyer</label>
    <language>en_US</language>
</ListView>