force-app/main/default/objects/Ship_Bill_Address__c/listViews/BillToLocked.listView-meta.xml
<ListView>
    <fullName>BillToLocked</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Factory_Name__c</columns>
    <columns>Address_1__c</columns>
    <columns>City__c</columns>
    <columns>Contact__c</columns>
    <columns>Country__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Local_ERP_customer_code__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>0122D000000nO7N</value>
    </filters>
    <label>_BillToLocked</label>
</ListView>